--- a/task_3.5/src/assets/css/main.css
+++ b/task_3.5/src/assets/css/main.css
@@ -1,6 +1,8 @@
-html, body, #app {
+html,
+body,
+#app {
     width: 100%;
-    height: 100%
+    height: 100%;
 }
 
 * {
@@ -9,26 +11,34 @@ html, body, #app {
     box-sizing: border-box;
 }
 
-#app {
-    background-color: #F2F5F7;
-}
-
 .wrapper {
-    
+    margin: auto;
+    max-width: 1440px;
+    width: 100%;
 }
 
 .header {
+    height: 124px;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    transition: background-color 0.2s ease-out;
 }
 
 .block {
     padding: 33px 66px;
 }
 
-.cards {
+.main {
+    height: 100%;
 
+    transition: background-color 0.2s ease-out;
+}
+
+.cards {
 }
 
 .card {
-
 }
