--- a/task_3.5/src/assets/css/main.css
+++ b/task_3.5/src/assets/css/main.css
@@ -3,6 +3,7 @@ body,
 #app {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 * {
@@ -13,32 +14,115 @@ body,
 
 .wrapper {
     margin: auto;
+
     max-width: 1440px;
     width: 100%;
+    height: 100%;
 }
 
 .header {
+    width: 100%;
     height: 124px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 
+    /* position: fixed; */
+
     transition: background-color 0.2s ease-out;
 }
 
 .block {
+    width: 100%;
+    height: 100%;
     padding: 33px 66px;
 }
 
 .main {
+    margin-bottom: 300px;
+
     height: 100%;
 
     transition: background-color 0.2s ease-out;
+
+    overflow-y: scroll;
+}
+
+.header-content {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .cards {
+    height: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 32px;
 }
 
 .card {
+    min-height: 325px;
+
+    height: 100%;
+    width: 100%;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 8px;
+}
+
+.theme-picker {
+    width: 73px;
+    height: 38px;
+    border: 0;
+    background-color: transparent;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    opacity: 0.7;
+}
+.theme-picker:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.search-box {
+    padding-left: 32px;
+    border-width: 1px;
+    border-style: solid;
+    height: 36px;
+    width: 440px;
+    border-radius: 20px;
+    
+    background-repeat: no-repeat;
+    background-position: 8px center;
+}
+.search-box:focus {
+    outline: 1px solid #92540A;
+}
+
+.settings-box {
+    width: 36px;
+    height: 36px;
+    
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 50%;
+    
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.settings-box:hover {
+    cursor: pointer;
+}
+
+.header-sub_content {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    gap: 16px;
 }
