--- a/task_3.5/src/assets/css/card.css
+++ b/task_3.5/src/assets/css/card.css
@@ -32,5 +32,5 @@
 }
 .favorite:hover {
     cursor: pointer;
-    background-image: url(../icons/favorites-hovered.svg) !important;
+    /* background-image: url(../icons/favorites-hovered.svg) !important; */
 }
