Make a proper 'full-screen' scaling of the pictures

--- a/task_3.5/src/assets/css/cards.css
+++ b/task_3.5/src/assets/css/cards.css
@@ -6,6 +6,16 @@
     grid-template-rows: repeat(3, 1fr) auto;
     gap: 32px;
 }
+@media (max-width: 1000px) {
+    .cards {
+        gap: 16px;
+    }
+}
+@media (max-width: 750px) {
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
 
 .modal {
     position: absolute;
@@ -20,16 +30,23 @@
 }
 
 .image {
+    max-height: 100%;
+    max-width: 100%;
     border-radius: 20px;
+    object-fit: cover;
 }
 
 .image-wrapper {
-    width: 100vw;
-    height: calc(100vh + 124px);
-    
+    padding: 32px;
+    max-width: 100vw;
+    max-height: calc(100vh - 124px);
+    height: 100%;
+    width: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     position: fixed;
+    top: 124px;
 }
