--- a/task_3.5/src/assets/css/main.css
+++ b/task_3.5/src/assets/css/main.css
@@ -15,33 +15,40 @@ body {
     overflow-y: scroll;
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
-input[type="number"] {
+input[type='number'] {
     -moz-appearance: textfield;
 }
 
 .wrapper {
     margin: auto;
+    padding: 32px 64px;
 
     width: 100%;
     height: 100%;
     max-width: 1440px;
 }
+@media (max-width: 1000px) {
+    .wrapper {
+        padding: 16px;
+    }
+}
 
 .header {
     width: 100%;
     height: 124px;
-    
+
     border-bottom-width: 1px;
     border-bottom-style: solid;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 
     position: fixed;
     z-index: 1;
@@ -57,13 +64,9 @@ input[type="number"] {
 
 .header-sub_content {
     display: flex;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     gap: 16px;
-}
-
-.block {
-    padding: 33px 66px;
 }
 
 .main {
@@ -71,6 +74,6 @@ input[type="number"] {
     min-height: 100%;
 
     transition: background-color 0.2s ease-out;
-    
+
     position: relative;
 }
