--- a/task_3.5/src/assets/css/cards.css
+++ b/task_3.5/src/assets/css/cards.css
@@ -16,6 +16,11 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+@media (max-width: 500px) {
+    .cards {
+        grid-template-columns: 1fr;
+    }
+}
 
 .modal {
     position: absolute;
@@ -33,11 +38,10 @@
     max-height: 100%;
     max-width: 100%;
     border-radius: 20px;
-    object-fit: cover;
 }
 
 .image-wrapper {
-    padding: 32px;
+    padding: 24px;
     max-width: 100vw;
     max-height: calc(100vh - 124px);
     height: 100%;
