--- a/task_3.5/src/assets/css/main.css
+++ b/task_3.5/src/assets/css/main.css
@@ -32,7 +32,7 @@ input[type='number'] {
     height: 100%;
     max-width: 1440px;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1065px) {
     .wrapper {
         padding: 16px;
     }
@@ -48,7 +48,6 @@ input[type='number'] {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
 
     position: fixed;
     z-index: 1;
@@ -61,12 +60,38 @@ input[type='number'] {
     justify-content: space-between;
     align-items: center;
 }
+@media (max-width: 1000px) {
+    .header-content {
+        flex-direction: column;
+    }
+    .logo {
+        width: 36px;
+    }
+}
 
-.header-sub_content {
+.header-left_content {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 16px;
+}
+@media (max-width: 1000px) {
+    .header-left_content {
+        width: 100%;
+        justify-content: flex-start;
+    }
+}
+
+.header-right_content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+@media (max-width: 1000px) {
+    .header-right_content {
+        align-self: flex-end;
+    }
 }
 
 .main {
