--- a/task_3.5/src/assets/css/search_box.css
+++ b/task_3.5/src/assets/css/search_box.css
@@ -13,3 +13,9 @@
     outline: 0;
     border: 1px solid #ffc682 !important;
 }
+@media (max-width: 1000px) {
+    .search-box {
+        width: auto;
+        flex-grow: 2;
+    }
+}
