--- a/task_3.5/src/assets/css/settings_box.css
+++ b/task_3.5/src/assets/css/settings_box.css
@@ -25,7 +25,7 @@
     padding-left: 16px;
 
     height: 36px;
-    width: min-content;
+    width: auto;
 
     border-width: 1px;
     border-style: solid;
@@ -34,6 +34,11 @@
 .limit:focus {
     outline: 0;
     border: 1px solid #ffc682 !important;
+}
+@media (max-width: 445px) {
+    .limit {
+        width: 100px;
+    }
 }
 
 .settings-menu {
