Replace active-color and breakpoints to the scss consts and add interfaces for typization instead of objects

--- a/task_3.5/src/assets/css/cards.css
+++ b/task_3.5/src/assets/css/cards.css
@@ -1,56 +1,53 @@
 .cards {
-    height: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr) auto;
+  gap: 32px;
+}
 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr) auto;
-    gap: 32px;
+@media (max-width: 700px) {
+  .cards {
+    gap: 16px;
+  }
 }
-@media (max-width: 1000px) {
-    .cards {
-        gap: 16px;
-    }
-}
-@media (max-width: 750px) {
-    .cards {
-        grid-template-columns: repeat(2, 1fr);
-    }
+@media (max-width: 700px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media (max-width: 500px) {
-    .cards {
-        grid-template-columns: 1fr;
-    }
+  .cards {
+    grid-template-columns: 1fr;
+  }
 }
-
 .modal {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-
-    user-select: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .image-wrapper {
-    padding: 24px;
-    max-width: 100vw;
-    max-height: calc(100vh - 124px);
-    height: 100%;
-    width: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: fixed;
-    top: 124px;
+  padding: 24px;
+  max-width: 100vw;
+  max-height: calc(100vh - 124px);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 124px;
 }
 
 .image {
-    max-height: 100%;
-    max-width: 100%;
-    border-radius: 20px;
+  max-height: 100%;
+  max-width: 100%;
+  border-radius: 20px;
 }
