Add a component for icons

--- a/task_3.5/src/assets/css/card.scss
+++ b/task_3.5/src/assets/css/card.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 
 .card {
-    min-height: 325px;
+    min-height: 15rem;
 
     border-width: 1px;
     border-style: solid;
