Add more flexible properties to css

--- a/task_3.5/src/assets/css/card.scss
+++ b/task_3.5/src/assets/css/card.scss
@@ -18,8 +18,8 @@
 }
 
 .favorite {
-    width: 36px;
-    height: 36px;
+    width: 2rem;
+    height: 2rem;
 
     border-radius: 50%;
     border-width: 1px;
@@ -29,8 +29,8 @@
     background-repeat: no-repeat;
 
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 0.5rem;
+    right: 0.5rem;
 
     &:hover {
         cursor: pointer;
