--- a/task_3.5/src/assets/css/search_box.scss
+++ b/task_3.5/src/assets/css/search_box.scss
@@ -1,11 +1,11 @@
 @import 'variables.scss';
 
 .search-box {
-    padding-left: 32px;
+    padding-left: 2rem;
     border-width: 1px;
     border-style: solid;
-    height: 36px;
-    width: 440px;
+    height: 2rem;
+    width: 20rem;
     border-radius: 20px;
 
     background-repeat: no-repeat;
