--- a/task_3.5/src/assets/css/app.scss
+++ b/task_3.5/src/assets/css/app.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
     margin: auto;
-    padding: 32px 64px;
+    padding: 2rem 4rem;
 
     width: 100%;
     height: 100%;
@@ -10,13 +10,13 @@
 }
 @media (max-width: $breakpoint-lg) {
     .wrapper {
-        padding: 16px;
+        padding: 1rem;
     }
 }
 
 .header {
     width: 100%;
-    height: 124px;
+    height: 8rem;
 
     border-bottom-width: 1px;
     border-bottom-style: solid;
@@ -40,16 +40,13 @@
     .header-content {
         flex-direction: column;
     }
-    .logo {
-        width: 36px;
-    }
 }
 
 .header-left_content {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    gap: 1rem;
 }
 @media (max-width: $breakpoint-lg) {
     .header-left_content {
@@ -62,7 +59,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    gap: 1rem;
 }
 @media (max-width: $breakpoint-lg) {
     .header-right_content {
@@ -71,7 +68,7 @@
 }
 
 .main {
-    padding-top: 124px;
+    padding-top: 8rem;
     min-height: 100%;
 
     transition: background-color 0.2s ease-out;
