--- a/task_3.5/src/assets/css/card.css
+++ b/task_3.5/src/assets/css/card.css
@@ -13,16 +13,16 @@
 }
 
 .favorite {
-  width: 36px;
-  height: 36px;
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
   border-width: 1px;
   border-style: solid;
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 .favorite:hover {
   cursor: pointer;
